fixed issue #4 now spacing is good

--- a/assets/style.css
+++ b/assets/style.css
@@ -221,8 +221,8 @@ img.arrow-down {
    
     .herodesc {
         font-size: 35px;
-        width: 70%;
         text-align: center;
+        width: 90%;
     }
     .primary {
         font-size: 45px;
